--- a/SelfSite.MVC/Content/Site.css
+++ b/SelfSite.MVC/Content/Site.css
@@ -22,3 +22,16 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.jumbotron-nobg{
+    background-color: transparent;
+}
+
+.body-vh{
+    min-height: 91vh;
+}
+
+.img-linebreak{
+    width:100%;
+    max-height: 5px;
+}
