--- a/SelfSite.MVC/Views/Home/Index.cshtml
+++ b/SelfSite.MVC/Views/Home/Index.cshtml
@@ -5,8 +5,44 @@
 <div class="jumbotron-nobg jumbotron text-center">
     <h1>Zachary Merrick</h1>
     <h3>Full Stack Web Developer</h3>
-    <img class="img-linebreak" src="~/Content/barfade.png" />
+    <img class="img-linebreak" src="~/Content/Images/barfade.png" />
 </div>
-<div class="panel panel-default">
+<div class="container-fluid">
+    <ul class="list-inline nav nav-pills nav-justified">
+        <li class="active"><a data-toggle="pill" href="#homeTab">HOME</a></li>
+        <li class=""><a data-toggle="pill" href="#resumeTab">RESUME</a></li>
+        <li class=""><a data-toggle="pill" href="#demosTab">DEMOS</a></li>
+    </ul>
+    <div class="tab-content">
 
+        <div id="homeTab" class="tab-pane fade in active">
+            <div class="text-center">
+                <h2>Welcome</h2>
+                <p>I am an energetic and motivated junior web developer looking for a place where I can practice my skills and expand my knowledge of web development. I constantly strive to learn and grow in the field and my passion for development drives me to meet and exceed my client’s project expectations.</p>
+            </div>
+            <div id="aboutWrapper" class="row">
+                <h3 class="col-sm-12">About Me</h3>
+                <div class="col-sm-3">
+                    <img class="img-responsive" src="~/Content/Images/Profile.png" />
+                </div>
+                <div class="col-sm-9">
+                    <p><strong>It all started with my first computer...</strong></p>
+                    <p>My father was never a very technologically inclined man. Being a self-taught mechanic all of his life and suffering from mild dyslexia that inhibited his learning process, he never expressed a need in learning about technology, but he was a little interested.
+                    It was this interest that lead him to purchase the first computer I ever interacted with at the age of 11.</p>
+                    <p> I felt the spark right away. Within hours I was delving into the depths of the internet and learning about anything I found interesting. My curiosity drove me to explore the system files of our computer, which ultimately caused me to break it
+                    within two weeks.</p>
+                </div>
+
+            </div>
+        </div>
+
+        <div id="resumeTab" class="tab-pane fade in">
+            Resume
+        </div>
+
+        <div id="demosTab" class="tab-pane fade in">
+            Demos
+        </div>
+
+    </div>
 </div>
