--- a/SelfSite.MVC/Views/Shared/_Layout.cshtml
+++ b/SelfSite.MVC/Views/Shared/_Layout.cshtml
@@ -3,22 +3,23 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My Interactive Resume</title>
+    <title>@ViewBag.Title - Interactive Resume</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body>  
+<body>
     <div class="container body-content body-vh">
-        @RenderBody()        
+        @RenderBody()
     </div>
 
     <footer class="navbar-fixed-bottom">
-        <p>&copy; @DateTime.Now.Year - My Interactive Resume</p>
+        <p>&copy; @DateTime.Now.Year - Interactive Resume</p>
     </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
 </body>
 </html>
